# cpp-input-hog

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  InputHog.sln  PLAN.md  README.md  build-driver.ps1  clean-reinstall-python.ps1  query  setup-windows.ps1  sign-driver.ps1
.github/workflows/: build-windows.yml
cmake/: FindWdk.cmake
controller/: InputHogControl-Debug.spec  InputHogControl.spec  app.py  backend_user32.py  build-debug.bat  build.bat  client.py  movements.py  playback_user32.py  recording.py  requirements.txt
driver/: CMakeLists.txt  InputHog.inf  InputHog.vcxproj  driver.c  injection.c  injection.h
shared/: ioctl.h
